# jcsnotfunny

./: .env.example  .gitignore  AGENTS.md  AGENTS_TEST_REPORT.md  AUTOMATION_SYSTEM_DOCUMENTATION.md  CHANGELOG.md  CLOUDFLARE_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMOCRATIC_SWARM_README.md  LICENSE  MANIFEST.in  PROJECT_V2.md  PYDANTIC_AI_SWARM_DOCUMENTATION.md  README.md  README_PROJECT.md  ROADMAP.md  SEO_ACTION_PLAN.md  SEO_OPTIMIZATION_SUMMARY.md  SEO_QUICK_START.md  SYSTEM_STATUS.md  VALUE_ADD_SUMMARY.md  WEBSITE_PLAN.md  agents.md  agents_config.json  autonomous_github_workflow.py  bio_title_examples.json  content_analysis_results.json  copilot-instructions.md  create_ai_agent_repo.sh  demo_agent_system.py  demo_democratic_swarm.py  docker-compose.yml  jaredsnotfunny_dashboard.json  main.py  process_remaining_issues.py  production_launcher.py  production_swarm_launcher.py  pydantic-ai-swarm-README.md  pydantic-ai-swarm-repo-structure.md  (+15 more)
.github/: COPILOT_INSTRUCTIONS.md  COPILOT_PROMPTS.md  copilot-instructions.md  labels.yml
agents/: Dockerfile  audio_engineer_agent.py  automation_agent.py  automation_testing_framework.py  base_agent.py  config.json  content_analyst_agent.py  content_automation_agent.py  diagnostic_agent.py  diagnostic_system.py  docker-compose.yml  efficiency_enforcer.py  enhanced_agents_config.json  funny_moment_agent.py  github_agent.py  health.py  mission_control.py  monitoring_agent.py  pydantic_ai_swarm_orchestrator.py  robust_tool.py  social_media_agent.py  specialized_agents.py  swarm_communication.py  swarm_monitoring.py  swarm_observability.py  swarm_orchestrator_agent.py  telemetry.py  transcription_agent.py  video_editing_agent.py  worker.py  youtube_clip_agent.py
configs/: audio_presets.yml.example  automation_tools.json  automation_tools.yml.example  host_profiles.yml.example  humor_training.json  master_settings.json  master_settings.json.example  master_settings.yml.example  social_providers.yml.example
crews/: youtube_shorts_crew.py
docs/: 24-7-worker.md  ARCHITECTURE_ANALYSIS.md  ASSETS_INVENTORY.md  COMPREHENSIVE_DOCUMENTATION.md  CONFIG_MANAGEMENT.md  DELIVERABLES.md  GROWTH_ACTION_PLAN.md  HISTORY_PURGE.md  IMPLEMENTATION_MASTER_LIST.md  IMPLEMENTATION_SUMMARY.md  OPTIONAL_DEPENDENCIES.md  PYDANTIC_AI_SWARM_DOCUMENTATION.md  SECRETS.md  SEO_STRATEGY.md  SOCIAL_AUTOMATION.md  SOPS.md  SOPS_AUDIO_MIXING.md  SOPS_AUTOMATION.md  SOPS_BACKUP_ARCHIVE.md  SOPS_CLIPS_SOCIAL.md  SOPS_CLOUDFLARE.md  SOPS_HUMOR_MODEL.md  SOPS_LIVE_PRODUCTION.md  SOPS_POST_PRODUCTION.md  SOPS_PUBLISHING.md  SOPS_QA.md  SOPS_REMOTE_EDITING.md  SOPS_SECRETS_CONFIG.md  SOPS_SHOW_PREP.md  SOPS_SPONSORS_AND_PLUGS.md  SUPERMEMORY_SELF_HOSTING.md  TESTING_AND_TROUBLESHOOTING.md  TRANSCRIPTION_AGENT.md  WEBSITE_ANALYSIS.md  WEBSITE_INTEGRATION.md  WEBSITE_SNAPSHOT.md  WEBSITE_STATUS.md  WEBSITE_UPGRADE_FRAMEWORK.md  YOUTUBE_ANALYTICS.md  agent-development.md  (+19 more)
downloads/: JAREDSNOTFUNNY Feat The Roanoke Pisser #12_YC-oohVCGwA.en.vtt
examples/: README.md  comprehensive_swarm_demo.py  simple_swarm_demo.py
exports/: troubleshooting_followups.md  troubleshooting_report.json
github_issues_md/: advanced_analytics_predictive_insights.md  ai_content_creation.md  ai_driven_keyword_research.md  ai_driven_keyword_research_seo.md  assistant_status_reporting.md  automated_broken_link_checker_seo.md  automated_engagement_strategy.md  automated_sitemap_generation_seo.md  booking_crm_integration.md  centralized_config_management.md  clip_generation_enhancement.md  comprehensive_keyword_strategy.md  comprehensive_local_keyword_strategy_seo.md  credential_monitoring_alerting.md  docker_integration_mcp.md  document_internal_linking_strategies_seo.md  document_local_seo_best_practices.md  document_social_media_engagement_strategies.md  document_social_media_engagement_strategies_seo.md  dynamic_seo_meta_tag_injection.md  enhanced_project_board_integration.md  error_handling_retries.md  gemini_cli_extensions_setup.md  high_quality_content_transcripts.md  image_optimization_automation.md  ingest_agent_enhancement.md  intelligent_archiving_cleanup.md  live_stream_precheck.md  local_content_creation_strategy.md  local_seo_best_practices_gmb_citations.md  mcp_youtube_upload_search.md  outline_backlink_building_strategies.md  outline_backlink_building_strategies_seo.md  podcast_rss_generator.md  precommit_cicd_quality_gates.md  proactive_trend_hijacking.md  publishing_enhancement.md  python_media_processing_mcp.md  seo_ai_driven_keyword_research.md  seo_automated_sitemap_generation.md  (+20 more)
googleapiclient/: __init__.py  discovery.py  http.py
logs/: agent_conversations.db  swarm_report_1767896309.json  swarm_report_1767896417.json  swarm_report_1767904666.json  swarm_report_1767904840.json  swarm_report_1767904954.json
pipelines/: README.md
scripts/: __init__.py  add-episode.sh  agent_orchestrator.py  analytics_collector.py  analytics_reporter.py  api-key-manager.sh  archive_uploader.py  audio_processor.py  audio_processor_working.py  auto_fix_doc_links.py  automated_video_pipeline.py  automation_runner.py  batch_scheduler.py  biotitle_optimizer.py  brand_overlay.py  check_no_media_in_commit.py  cli.py  clip_generator.py  cloudflare_uploader.py  content_analysis_agent.py  content_creator.py  content_generator.py  content_planner.py  content_poster.py  create_issues.sh  credential_checks.py  dashboard.sh  diagnostics.py  doc_link_checker.py  engagement_automator.py  enhance-homepage.sh  generate-show-notes.sh  generate_doc_link_whitelist.py  humor_data.py  humor_finetune.py  humor_score.py  ingest.py  live_director_agent.py  mcp_publish.py  metadata_generator.py  (+47 more)
templates/: social_post_templates.md
tests/: conftest.py  test_agent_orchestrator.py  test_analytics_collector.py  test_archive_uploader.py  test_auto_edit.py  test_auto_fix_doc_links.py  test_automation_runner.py  test_channel_monitor.py  test_clip_generator.py  test_credential_checks.py  test_diagnostics.py  test_diar_metrics.py  test_diarization_accuracy.py  test_doc_links.py  test_doc_links_bare_tokens.py  (+38 more)
(+334 files in other folders)
