[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydantic-ai-swarm"
version = "1.0.0"
description = "Enterprise-grade AI agent orchestration system with democratic governance, comprehensive monitoring, and production-ready reliability."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "Pydantic AI Swarm Team", email = "team@pydantic-ai-swarm.com"},
]
maintainers = [
    {name = "Pydantic AI Swarm Team", email = "team@pydantic-ai-swarm.com"},
]
keywords = [
    "ai",
    "agents",
    "swarm",
    "orchestration",
    "democratic",
    "pydantic",
    "async",
    "monitoring",
    "enterprise",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-ai>=0.1.0",
    "openai>=1.3.0,<2.0.0",
    "asyncio-mqtt>=0.16.1,<1.0.0",
    "redis>=5.0.1,<6.0.0",
    "aioredis>=2.0.1,<3.0.0",
    "uvicorn>=0.24.0,<1.0.0",
    "fastapi>=0.104.1,<1.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "websockets>=12.0,<13.0",
    "colorama>=0.4.6,<1.0.0",
    "tqdm>=4.66.1,<5.0.0",
    "schedule>=1.2.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pillow>=10.1.0,<11.0.0",
    "moviepy>=1.0.3,<2.0.0",
    "pydub>=0.25.1,<1.0.0",
    "click>=8.1.7,<9.0.0",
    "requests>=2.31.0,<3.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/pydantic-ai-swarm"
Documentation = "https://pydantic-ai-swarm.readthedocs.io/"
Repository = "https://github.com/your-org/pydantic-ai-swarm.git"
Issues = "https://github.com/your-org/pydantic-ai-swarm/issues"
Changelog = "https://github.com/your-org/pydantic-ai-swarm/blob/main/CHANGELOG.md"

[project.scripts]
pydantic-swarm = "agents.production_launcher:main"

[project.optional-dependencies]
dev = [
    "black>=23.12.1,<24.0.0",
    "isort>=5.13.2,<6.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.7.1,<2.0.0",
    "pre-commit>=3.6.0,<4.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "coverage>=7.4.0,<8.0.0",
    "sphinx>=7.2.0,<8.0.0",
    "sphinx-rtd-theme>=1.3.0,<2.0.0",
]
gpu = [
    "torch>=2.1.0,<3.0.0",
    "torchaudio>=2.1.0,<3.0.0",
    "torchvision>=0.16.0,<1.0.0",
    "whisperx @ git+https://github.com/m-bain/whisperx.git",
]
ml = [
    "sentence-transformers>=2.2.2,<3.0.0",
    "faiss-cpu>=1.7.4,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.1.0,<3.0.0",
]
google = [
    "google-auth>=2.23.4,<3.0.0",
    "google-auth-oauthlib>=1.2.0,<2.0.0",
    "google-api-python-client>=2.108.0,<3.0.0",
]
oauth = [
    "requests-oauthlib>=1.3.1,<2.0.0",
    "oauthlib>=3.2.2,<4.0.0",
]
monitoring = [
    "prometheus-client>=0.19.0,<1.0.0",
    "statsd>=4.0.1,<5.0.0",
    "datadog>=0.47.0,<1.0.0",
]
docker = [
    "docker>=7.0.0,<8.0.0",
    "kubernetes>=28.1.0,<29.0.0",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.setuptools.package-data]
"agents" = ["py.typed"]

# Testing configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "performance: Performance tests",
    "slow: Slow running tests",
    "async: Async tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["agents"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "agents.mcp_servers.*",
    "agents.scripts.*",
    "tests.*",
]
ignore_errors = true
